2010-01-11  kitone  <kitone@gna.org>

	* src/vp/videoplayer.cc:
	Fix bug #15085 : last subtitle remains visible after playing in video player.

2010-01-11  kitone  <kitone@gna.org>

	* src/main.cc: 
	Fix bug #15095 : gracefully exit if e.g. subtitleeditor.ui is missing.
	(patch by Philip Jägenstedt <foolip>)

2010-01-10  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	Fix bug #15084 : default to the document format when saving
	translations. (patch by Philip Jägenstedt <foolip>)

2010-01-08  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Fix bug #14915 : Add the possibility of choice of an audio track to the
	videoplayermanagement.

2010-01-08  kitone  <kitone@gna.org>

	* src/player.cc:
	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Fix bug #14915 : Add the possibility of choice of an audio track to the	player.

2010-01-08  kitone  <kitone@gna.org>

	* src/vp/videoplayer.cc:
	FIXME comment for later.

2010-01-06  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	Launch a gstreamer error if we cannot get the duration of the stream.

2010-01-05  kitone  <kitone@gna.org>

	* src/we/waveformrenderer.cc:
	Return zero if the duration is not positive. (patch by Philip Jägenstedt <foolip>)

2010-01-05  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	Update the duration value after the EOS signal and only set duration on
	waveform if we actually know it. (patch by Philip Jägenstedt <foolip>)

2010-01-05  kitone  <kitone@gna.org>

	* src/gui/menubar.cc:
	Change AccelKey of Extensions (conflict with Edit).

2010-01-01  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix typo.

2010-01-01  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-12-31  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in: