@@ -1,3 +1,8 @@
+2010-01-12  kitone  <kitone@gna.org>
+
+	* plugins/actions/combinesubtitles/combinesubtitles.cc:
+	Fix bug #15101 : Comments are not merged while merging subtitles.
+
 2010-01-11  kitone  <kitone@gna.org>
 
 	* src/vp/videoplayer.cc:
